# brevixai-agents

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: benchmark-quality-gate.yml  (+1 more)
app/: __init__.py  config.py  duplicate_payment_workflow.py  graph.py  investigation_synthesis.py  irs_notice_workflow.py  irs_procedural.py  main.py  models.py  observability.py
datasets/: fraud_benchmarks.json  irs_answer_quality_fixtures.json
docs/: benchmarks.md  github-actions-agent-deploy.md  investigation_synthesis.md
evaluators/: __init__.py  compare.py  coverage.py  dataset.py  deterministic.py  report.py
reports/: BENCHMARK_SNAPSHOT.md  coverage_matrix.json  coverage_matrix.md  irs_smoke_local.json  latest_benchmark_report.json  latest_benchmark_report.md  smoke_irs_knowledge_phase2d.json
scripts/: compare_benchmark_reports.py  generate_benchmark_snapshot.py  generate_coverage_matrix.py  quality_gate.py  run_benchmarks.py  run_evals.py  smoke_irs_knowledge.py  validate_benchmark_dataset.py
tests/: fakes.py  test_action_gate.py  test_compare.py  test_cors.py  test_coverage.py  test_dataset.py  test_dataset_validation.py  test_duplicate_payment_workflow.py  test_evals.py  test_explanation.py  test_fraud_analyzer.py  test_graph.py  test_guided_intake.py  test_investigation_synthesis.py  test_irs_answer_quality.py  test_irs_notice_extraction.py  test_irs_notice_workflow.py  test_laravel_tool_client.py  test_models.py  test_prompts.py  test_providers.py  test_quality_gate.py  test_report.py  test_router.py  test_snapshot.py
(+47 files in other folders)
