[project]
name = "brevixai-agent-service"
version = "0.1.0"
description = "FastAPI LangGraph orchestration service for Brevix AI Phase 1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]
llm = [
    "openai>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[project.scripts]
run-evals = "scripts.run_evals:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
